<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:padding="10dp"
    tools:context="com.example.rubs.ormlitedemo.MainActivity">

    <Button
        android:id="@+id/btnAddInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/add_information" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnAddInformation"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/update_button" />


    <Button
        android:id="@+id/btnShowInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnUpdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/show_information" />
</RelativeLayout>
