<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.example.rubs.ormlitedemo.UpdateActivity">

    <EditText
        android:id="@+id/edAddName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/enter_your_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edAddEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/edAddName"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/enter_your_email"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edAddEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:text="@string/update_record" />
</RelativeLayout>
